--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <link href="app.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <meta name="mobile-web-app-capable" content="yes">
-        <title>LaTeX File Merger</title>
+        <title>File Merger</title>
     </head>
     
     <body>
         <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">LaTeX File Merger</a>
+                <a class="navbar-brand" href="#">File Merger</a>
             </div>
         </nav>
         <div class="container">
